IE alignment fixes

--- a/assets/main.css
+++ b/assets/main.css
@@ -12,19 +12,16 @@ nav {
 }
 
 nav .nav-wrapper {
-  margin-left: auto;
-  margin-right: auto;
   padding-left: 13px;
   padding-right: 13px;
   display: flex;
-  justify-content: flex-end;
 }
 
 nav i {
   color: black;
 }
 
-nav div:first-of-type {
+nav .searchbox {
   margin-right: auto;
 }
 
